Hoot App Almost Completed

--- a/grunt-app/app/src/login/loginview.html
+++ b/grunt-app/app/src/login/loginview.html
@@ -9,6 +9,8 @@
   <img class="img-tree" ng-src="images/tree.png"/>
   <img class="img-center" ng-src="images/nightsky.jpg"/>
   <img class="img-center" ng-class="{'animated fadeOut': vm.activateNight}" ng-src="images/owlNtree1.gif"/>
+  <img class="img-zzz" ng-hide="vm.activateNight" ng-src="images/zzz.gif"/>
+
   <div ng-hide="vm.activateNight">
     <p class="tap-text animated pulse infinite">Tap Screen to Login</p>
   </div>
