--- a/grunt-app/app/index.html
+++ b/grunt-app/app/index.html
@@ -18,7 +18,7 @@
   <!-- endbuild -->
 </head>
 
-<body ng-app="app" class="container" ng-cloak="">
+<body ng-app="app" class="container" ng-cloak="" ng-show="$root.viewEntered">
 <ion-nav-view> </ion-nav-view>
 </body>
 
