--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -2,11 +2,11 @@
   <ng-audio-recorder id="mainAudio" audio-model="recorded" vm="vm" show-player="false" time-limit="time-limit">
 
     <div class="main-text animated" ng-hide="$root.isRecording" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording}">
-      <p class="text-hoot">Give a Hoot</p>
+      <p class="text-hoot">Give a Hoot{{$root.isAvailable}}</p>
       <p class="text-hoot">Take a Hoot</p>
     </div>
 
-    <ion-content overflow-scroll="false" has-bouncing="true" class="padding" on-swipe-down="homepageview.html" on-tap="recorder.stopRecord()"
+    <ion-content overflow-scroll="false" has-bouncing="true" class="padding" on-swipe-down="$root.goto('homepage', recorder)" on-tap="recorder.stopRecord()"
                  on-swipe-left="$root.goto('listenHoot',recorder)" style="z-index: 99999; padding: 0;">
 
       <audio id="audio-tag" class="player" controls autoplay="true"
@@ -14,7 +14,7 @@
       </audio>
       <!--<div on-tap="vm.test1(leftSwipe)">-->
       <div class="container" on-tap="recorder.save('upload')"
-           on-swipe-up="vm.startRecord(recorder);">
+           on-swipe-up="vm.startRecord(recorder);" ng-disabled="$root.isRecording">
 
 
 
@@ -45,6 +45,7 @@
     <img class="img-sun animated" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording}" ng-src="images/moon.png"/>
     <img class="img-tree parallax-animated" ng-class="{'fadeOutDown': $root.isRecording  || $root.PageChange, 'fadeInUp': !$root.isRecording }" ng-src="images/tree.png"/>
     <img class="img-center-motion" ng-src="images/nightmotion.gif"/>
+    <img ng-hide="!$root.isAvailable" class="img-upload animated" ng-class="{'fadeOut': !$root.isAvailable || $root.isRecording || $root.showSuccess, 'fadeIn': $root.isAvailable}" ng-src="images/ripple.svg" alt="">
 
   </ng-audio-recorder>
 </ion-pane>
