In Progress - Reanimating Homepage to ListenHoot Page

--- a/grunt-app/app/src/homepage/homepageview.html
+++ b/grunt-app/app/src/homepage/homepageview.html
@@ -41,7 +41,9 @@
 
     <img class="img-trees1 animated" ng-class="{'left-motion-trees1': $root.PageChange}" ng-src="images/trees1.png" alt="">
     <img class="img-trees animated"  ng-class="{'left-motion-trees': $root.PageChange}" ng-src="images/trees.png" alt="">
-    <img class="img-branch1 animated" ng-class="{'left-motion-branch1': $root.PageChange}" ng-src="images/branch1.png" alt="">
+    <img class="img-branch animated" ng-class="{'left-motion-branch1': $root.PageChange}" ng-src="images/branch.png" alt="">
+    <img class="img-nest-back animated" ng-class="{'left-motion-branch1': $root.PageChange}" ng-src="images/nest-back.png" alt="">
+    <img class="img-nest-front animated" ng-class="{'left-motion-branch1': $root.PageChange}" ng-src="images/nest-front.png" alt="">
     <img ng-hide="$root.isRecording" class="img-mic animated" ng-class="{'fadeOutDown': $root.isRecording, 'fadeInUp': !$root.isRecording, 'fadeOut': $root.PageChange, 'fadeIn': !$root.PageChange}" ng-src="images/mic-arrow-gif.gif" alt="">
     <img ng-show="$root.showSuccess"  ng-class="{'fadeIn': $root.showSuccess, 'fadeOut': !$root.showSuccess}" class="img-success animated" ng-src="images/success.png" alt="">
     <img class="img-center animated" ng-class="{'fadeOutUp': $root.isRecording, 'fadeInDown': !$root.isRecording}" ng-src="images/nightsky.jpg"/>
